# deepextractor

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
assets/: data_o3a_sample.csv  glitch_dict_example.pkl  scaler.pkl  scaler_bilby.pkl
assets/cdvgan/: fingerprint.pb  keras_metadata.pb  saved_model.pb
assets/cdvgan/variables/: variables.data-00000-of-00001  variables.index
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/guides/: installation.rst  overview.rst  quickstart.rst  training.rst
notebooks/: deepextractor_example.ipynb  deepextractor_minimal.ipynb  glitch_reconstruction_tutorial.ipynb  training_tutorial.ipynb  training_tutorial_colab.ipynb  visualizations_and_results.ipynb
pretrained/DeepExtractor_257/: checkpoint_best_bilby_noise_base.pth.tar  checkpoint_best_real_noise_base.pth.tar
src/deepextractor/: __init__.py  api.py  model.py
src/deepextractor/assets/: data_o3a_sample.csv  scaler.pkl  scaler_bilby.pkl
src/deepextractor/assets/cdvgan/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src/deepextractor/assets/cdvgan/variables/: variables.index
src/deepextractor/data/: __init__.py  datasets.py
src/deepextractor/evaluation/: __init__.py  simulate.py
src/deepextractor/generation/: __init__.py  generate_spectrograms.py  generate_timeseries.py  glitch_functions.py
src/deepextractor/models/: __init__.py  architectures.py
src/deepextractor/training/: __init__.py  train_fn.py  trainer.py
src/deepextractor/utils/: __init__.py  checkpoints.py  io.py  metrics.py  signal.py  stft.py  visualization.py
tests/: conftest.py  test_datasets.py  test_deepextractor_model.py  test_generate_timeseries.py  test_glitch_functions.py  test_metrics.py  test_models.py  test_signal_utils.py
