[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "deepextractor"
dynamic = ["version"]
description = "Deep learning framework for reconstructing gravitational wave signals and glitches from LIGO detector data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Tom Dooney" }
]
keywords = ["gravitational-waves", "LIGO", "deep-learning", "glitch", "signal-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies — always required
dependencies = [
    "numpy>=1.26,<2.0",
    "torch>=2.1",
    "matplotlib>=3.9",
    "scienceplots>=2.1",
    "pandas>=2.2",
    "tqdm>=4.67",
    "scikit-learn>=1.5",
    "gwpy>=3.0",
    "pycbc>=2.7",
    "scipy>=1.11",
    "huggingface_hub>=0.20",
    "bilby>=2.0",
]

[project.optional-dependencies]
# Generative glitch models — large optional deps including TF
generative = [
    "tensorflow>=2.14",
    "gengli>=0.2",
]
# Developer tools
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "nbstripout>=0.7",
]
# Documentation
docs = [
    "sphinx>=7",
    "sphinx-autoapi>=3",
    "furo>=2024.1.29",
    "myst-parser>=3",
    "nbsphinx>=0.9",
    "ipykernel",
]
# Full install
all = ["deepextractor[generative,dev,docs]"]

[project.urls]
Repository = "https://github.com/tomdooney95/deepextractor"
Paper = "https://arxiv.org/abs/2501.18423"

[project.scripts]
deepextractor-train    = "deepextractor.training.trainer:main"
deepextractor-generate = "deepextractor.generation.generate_timeseries:main"
deepextractor-specgen  = "deepextractor.generation.generate_spectrograms:main"
deepextractor-evaluate = "deepextractor.evaluation.simulate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Derives version from git tags (e.g., v0.1.0 → 0.1.0)
write_to = "src/deepextractor/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=deepextractor --cov-report=term-missing"

[tool.ruff]
src = ["src"]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
mypy_path = "src"
strict = false
ignore_missing_imports = true
